# weather

./: .gitignore  README.md  flake.nix  index.html  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml  test-on-pr.yml
src/: App.svelte  stores.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  main.rs  weather_response.rs
src-tauri/src/api/: errors.rs  geocoding.rs  mod.rs  weather_api.rs
src-tauri/src/models/: geocoding.rs  mod.rs  weather_response.rs  wmo_code.rs
src/bindings/: Current.ts  CurrentUnits.ts  CurrentWeatherResponse.ts  Daily.ts  DailyUnits.ts  Location.ts  WeatherData.ts  WeatherResponse.ts
src/components/: CurrentLocationDisplay.svelte  Footer.svelte  LocationInputField.svelte  Modal.svelte  SettingsButton.svelte  WeatherCard.svelte
src/components/widgets/: CurrentWeatherConditionWidget.svelte  DailyWeatherConditionWidget.svelte  TomorrowWeatherConditionWidget.svelte  WeatherConditionWidget.svelte
src/models/: Temperature.ts
