[package]
name = "weather"
version = "1.0.0"
description = "A Weather App"
authors = ["Daniel Agyapong <kunkumah@gmail.com>", "Kenny Ketelaar <kenny@ketelaar.tech>", "Max Meijer <mdvmeijer@protonmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/Kinoxyz/weather"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = ["json"] }
ts-rs = { version = "7.0", features = ["format"] }
anyhow = "1.0.75"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
